file: Actualización Final

--- a/laboratorio3.html
+++ b/laboratorio3.html
@@ -3,9 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tienda Virtual Gaming</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <img src="Imágenes/icono.png" alt="Icono">
+            <a href="#">Inicio</a>
+            <a href="#">Nosotros</a>
+            <a href="#">Artículos</a>
+            <a href="#">Carrito</a>
+            <a href="#">Login / Register</a>
+        </nav>
+    </header>
+    <main>
+        <div>
+            <img src="Imágenes/imagen1.png" alt="PS5">
+            <p>Esto es un párrafo de descripción</p>
+            <p>Esto es un párrafo de especificaciones</p>
+            <span>Esto es un span para el precio</span>
+        </div>
+        <div>
+            <img src="Imágenes/imagen1.png" alt="PS4">
+            <p>Esto es un párrafo de descripción</p>
+            <p>Esto es un párrafo de especificaciones</p>
+            <span>Esto es un span para el precio</span>
+        </div>
+        <div>
+            <img src="Imágenes/imagen1.png" alt="Nintendo-Switch">
+            <p>Esto es un párrafo de descripción</p>
+            <p>Esto es un párrafo de especificaciones</p>
+            <span>Esto es un span para el precio</span>
+        </div>
+        <div>
+            <img src="Imágenes/imagen1.png" alt="Xbox">
+            <p>Esto es un párrafo de descripción</p>
+            <p>Esto es un párrafo de especificaciones</p>
+            <span>Esto es un span para el precio</span>
+        </div>
+        <div>
+            <img src="Imágenes/imagen1.png" alt="PC-Gaming">
+            <p>Esto es un párrafo de descripción</p>
+            <p>Esto es un párrafo de especificaciones</p>
+            <span>Esto es un span para el precio</span>
+        </div>
+        <div>
+            <img src="Imágenes/imagen1.png" alt="Game-Boy-Advance">
+            <p>Esto es un párrafo de descripción</p>
+            <p>Esto es un párrafo de especificaciones</p>
+            <span>Esto es un span para el precio</span>
+        </div>
+    </main>
+    <footer>
+        <p>Copyright © 2023 Alex Cabana. Todos los derechos reservados</p>
+    </footer>
 </body>
 </html>
