file: Actualización de comentarios y tablas

--- a/laboratorio3.html
+++ b/laboratorio3.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tienda Virtual Gaming</title>
+    <title>Tienda Virtual Gaming</title> <!--Título de la página-->
 </head>
 <body>
-    <header>
-        <nav>
+    <header> <!--Cabecera de la página-->
+        <nav> <!--Navegación de la página, uso de img y enlaces-->
             <img src="Imágenes/icono.png" alt="Icono">
             <a href="#">Inicio</a>
             <a href="#">Nosotros</a>
@@ -16,27 +16,27 @@
             <a href="#">Login / Register</a>
         </nav>
     </header>
-    <main>
-        <div>
+    <main> <!--Contenido principal-->
+        <div><!--Uso de div, img, p y span-->
             <img src="Imágenes/imagen1.png" alt="PS5">
             <p>Esto es un párrafo de descripción</p>
             <p>Esto es un párrafo de especificaciones</p>
             <span>Esto es un span para el precio</span>
         </div>
-        <div>
+        <div><!--Uso de div, img, p y span-->
             <img src="Imágenes/imagen1.png" alt="PS4">
             <p>Esto es un párrafo de descripción</p>
             <p>Esto es un párrafo de especificaciones</p>
             <span>Esto es un span para el precio</span>
         </div>
-        <div>
+        <div><!--Uso de div, img, p y span-->
             <img src="Imágenes/imagen1.png" alt="Nintendo-Switch">
             <p>Esto es un párrafo de descripción</p>
             <p>Esto es un párrafo de especificaciones</p>
             <span>Esto es un span para el precio</span>
         </div>
         <hr>
-        <div>
+        <div><!--Uso de div, img, p y span-->
             <img src="Imágenes/imagen1.png" alt="Xbox">
             <p>Esto es un párrafo de descripción</p>
             <p>Esto es un párrafo de especificaciones</p>
@@ -48,14 +48,28 @@
             <p>Esto es un párrafo de especificaciones</p>
             <span>Esto es un span para el precio</span>
         </div>
-        <div>
+        <div><!--Uso de div, img, p y span-->
             <img src="Imágenes/imagen1.png" alt="Game-Boy-Advance">
             <p>Esto es un párrafo de descripción</p>
             <p>Esto es un párrafo de especificaciones</p>
             <span>Esto es un span para el precio</span>
         </div>
+        <table> <!--Uso de table, tr, th y td-->
+            <tr>
+                <th><img src="Imágenes/imagen1.png" alt="Steam-Deck"></th>
+            </tr>
+            <tr>
+                <td>Esto es una celda de tabla de título</td>
+            </tr>
+            <tr>
+                <td>Esto es una celda de tabla de descripción</td>
+            </tr>
+            <tr>
+                <td>Esto es una celda de tabla de precio</td>
+            </tr>
+        </table>
     </main>
-    <footer>
+    <footer> <!--Pie de página-->
         <p>Copyright © 2023 Alex Cabana. Todos los derechos reservados</p>
     </footer>
 </body>
