file: Actualización de tablas y comentarios

--- a/laboratorio3.html
+++ b/laboratorio3.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tienda Virtual Gaming</title> <!--Título de la página-->
+    <title>Tienda Virtual Gaming</title><!--Título de la página-->
 </head>
 <body>
-    <header> <!--Cabecera de la página-->
-        <nav> <!--Navegación de la página, uso de img y enlaces-->
+    <header><!--Cabecera de la página-->
+        <nav><!--Navegación de la página, uso de img y enlaces-->
             <img src="Imágenes/icono.png" alt="Icono">
             <a href="#">Inicio</a>
             <a href="#">Nosotros</a>
@@ -16,7 +16,7 @@
             <a href="#">Login / Register</a>
         </nav>
     </header>
-    <main> <!--Contenido principal-->
+    <main><!--Contenido principal-->
         <div><!--Uso de div, img, p y span-->
             <img src="Imágenes/imagen1.png" alt="PS5">
             <p>Esto es un párrafo de descripción</p>
@@ -42,13 +42,13 @@
             <p>Esto es un párrafo de especificaciones</p>
             <span>Esto es un span para el precio</span>
         </div>
-        <div>
+        <div><!--Uso de div, img, p y span-->
             <img src="Imágenes/imagen1.png" alt="PC-Gaming">
             <p>Esto es un párrafo de descripción</p>
             <p>Esto es un párrafo de especificaciones</p>
             <span>Esto es un span para el precio</span>
         </div>
-        <table> <!--Uso de table, tr, th y td-->
+        <table><!--Uso de table, tr, th y td-->
             <tr>
                 <th><img src="Imágenes/imagen1.png" alt="Steam-Deck"></th>
             </tr>
@@ -63,7 +63,7 @@
             </tr>
         </table>
     </main>
-    <footer> <!--Pie de página-->
+    <footer><!--Pie de página-->
         <p>Copyright © 2023 Alex Cabana. Todos los derechos reservados</p>
     </footer>
 </body>
