file: Actualización de tablas y comentarios

--- a/laboratorio3.html
+++ b/laboratorio3.html
@@ -35,7 +35,7 @@
             <p>Esto es un párrafo de especificaciones</p>
             <span>Esto es un span para el precio</span>
         </div>
-        <hr>
+        <hr><!--Uso de hr como separación de contenido-->
         <div><!--Uso de div, img, p y span-->
             <img src="Imágenes/imagen1.png" alt="Xbox">
             <p>Esto es un párrafo de descripción</p>
